# ChangeLog for sys-apps/portage
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Id$

*portage-2.2.01.15354-r1 (22 Jul 2010)

  22 Jul 2010; Jeremy Olexa <darkside@gentoo.org>
  +files/0001-emerge-webrsync-Redundant-Mirroring.patch,
  +portage-2.2.01.15354-r1.ebuild:
  Add emerge-webrsync patch to use a redundant mirror

*portage-2.2.01.15354 (07 Jul 2010)

  07 Jul 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.15819.ebuild, -portage-2.2.01.15352.ebuild,
  +portage-2.2.01.15354.ebuild:
  Bump, shebang fixing now also considers scripts that are symlinked from
  inside path but reside outside path

*portage-2.2.01.15352 (02 Jul 2010)

  02 Jul 2010; Fabian Groffen <grobian@gentoo.org>
  +portage-2.2.01.15352.ebuild:
  New snapshot, first one off git/hg

*portage-2.2.00.15842-r1 (24 Apr 2010)

  24 Apr 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.15842.ebuild, +portage-2.2.00.15842-r1.ebuild,
  +files/portage-2.2.00.15842-shebangcheck.patch:
  Add patch to fix shebang check being overaggressive, bug #313731

  16 Apr 2010; Michael Haubenwallner <haubi@gentoo.org>
  portage-2.2.00.15842.ebuild,
  +files/portage-2.2.00.15842-configshell.patch:
  add patch for bug#308835, need to use CONFIG_SHELL on AIX

*portage-2.2.00.15842 (23 Mar 2010)

  23 Mar 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.15801.ebuild, +portage-2.2.00.15842.ebuild:
  Bump, fix AIX hooks.  This is the last SVN-based version.

*portage-2.2.00.15838 (21 Mar 2010)

  21 Mar 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.15754.ebuild, +portage-2.2.00.15838.ebuild:
  Bump, shebang check got more strict by checking existence of already
  prefixed shebangs as well now

*portage-2.2.00.15819 (11 Mar 2010)

  11 Mar 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.15817.ebuild, +portage-2.2.00.15819.ebuild:
  Replace snapshot, added fix for summary.log misplacement when